# dsplua

./: README.md  audio_template.cpp  audiosystem.c  audiosystem.h  audiosystem_wrap.c  kfr_sample.hpp  kfr_sample.i  kfr_sample_dsp.hpp  kfr_sample_wrap.cxx  make_kfrsample.sh  make_test.sh  samples_wrap.cxx  test
Analysis/: README.md  aubio.py  aubio_wrap.cxx  audiofft_wrap.cxx  fftw3cxx.hh  make_pyaubio.sh  make_pyaudiofft.sh
DSP/Grizzly/dsperados/math/: CMakeLists.txt  LICENSE.md  README.md  access.hpp  analysis.hpp  bezier.cpp  bezier.hpp  constants.hpp  ease.hpp  interleave.hpp  interpolation.hpp  linear.hpp  sinusoid.hpp  spline.hpp  utility.hpp
DSP/Grizzly/dsperados/math/test/: CMakeLists.txt  normalize.cpp  sigmoid.cpp
Filters/: CombFilter.h  DCBlock.h  Delay.cpp  DelayLine.h  FFT_R2.hpp  FilterBank.cpp  FilterBank.h  FracDelayLine.h  FractionalDelayBuffer.cpp  FractionalDelayBuffer.h  MVDelayLine.cpp  MVDelayLine.h  ModDelay.h  README.md  biquad.i  biquad_wrap.cxx  block.lua  cppfilters.i  cppfilters_wrap.cxx  filter.lua  filter_test.lua  fir1.i  fir1_wrap.cxx  fir_filter_wrap.cxx  make_spuce.sh  polyphase.h  remez_exchange.c  simplesynth.lua  two_pole.lua
Kfr/: kfr_bessel.hpp  kfr_butterworth.hpp  kfr_chebyshev1.hpp  kfr_chebyshev2.hpp
Resampler/: PolyPhaseFilterBank.cpp  PolyPhaseFilterBank.hpp  SimpleResampler.hpp  resampler.cc  resampler.h  speex_resampler.hpp
math/: README.md  SimpleArmadillo.h  armadillo.i  armadillo_wrap.cxx  armadsp.i  convole.hpp  convolve.cpp  make_arma.sh  make_armadsp.sh  make_mkl.sh  make_pyarma.sh  make_pyarray2d.sh  mkl.i  (+7 more)
(+380 files in other folders)
